--- a/package.json
+++ b/package.json
@@ -3,21 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^16.0.1",
+    "@contentful/rich-text-types": "^17.0.0",
     "@headlessui/react": "^2.1.8",
     "@heroicons/react": "^2.1.5",
+    "@mui/icons-material": "^6.3.1",
+    "@mui/material": "^6.3.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
+    "clsx": "^2.1.1",
+    "contentful": "^11.4.0",
+    "embla-carousel-react": "^8.5.2",
+    "flowbite-react": "^0.10.2",
     "form-data": "^4.0.0",
     "formik": "^2.4.6",
     "mailgun": "^0.5.0",
     "mailgun.js": "^10.2.3",
+    "marked": "^15.0.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.0",
     "reactjs-popup": "^2.0.6",
